<resources>
    <string name="app_name">KnowledgeBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My knowledge list</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_step_one">List and Database</string>
    <string name="nav_step_two">Server sync :TODO</string>
    <string name="nav_step_three">Animation :TODO</string>
    <string name="nav_step_four">Other :TODO</string>

    <string name="total">Total</string>
    <string name="colon">:</string>
    <string name="edit">Edit</string>
    <string name="show">Show</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="english">English</string>
    <string name="math">Math</string>
    <string name="science">Science</string>

    <string name="title_hint">Input the news title you want to handle</string>
    <string name="radio_hint">Select the news category you want to handle</string>
    <string name="title">Title</string>
    <string name="android">Android</string>
    <string name="shopping">Shopping</string>
    <string name="music">Music</string>
    <string name="pets">Pets</string>
    <string name="travel">Travel</string>

    <string name="message_confirm_delete_newshandler">Are you sure you want to delete "%1$s"?</string>
    <string name="message_error_get_news">Failed to get news.</string>
    <string name="message_save_success">Save success!</string>
</resources>
