<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_header"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/delete"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_save"/>

        <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:id="@+id/edit_hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_hint"
            android:textColor="#888888"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/layout_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:inputType="text"
            android:hint="@string/title"
            app:layout_constraintTop_toBottomOf="@id/edit_hint_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/select_radio_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_hint"
            android:textColor="#888888"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/edit_text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
            android:id="@+id/radio_group_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/select_radio_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
                android:id="@+id/radio_button_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"/>

        <RadioButton
                android:id="@+id/radio_button_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping"/>

        <RadioButton
                android:id="@+id/radio_button_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"/>

        <RadioButton
                android:id="@+id/radio_button_pets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pets"/>

        <RadioButton
                android:id="@+id/radio_button_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
